<resources>
    <string name="app_name">laba2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="arrow_back">arrow back</string>
    <string name="search">search</string>
    <string name="notifications">Notifications</string>
    <string name="roman_kamushken">Roman Kamushken</string>
    <string name="_2_days_ago">2 days ago</string>
    <string name="Desc1">Check out awesome updates for Android design kit for Figma. Now more screens and more categories.</string>
    <string name="repl1">117 REPLAYS</string>
    <string name="tina_turbina">Tina Turbina</string>
    <string name="_18_minutes_ago">18 minutes ago</string>
    <string name="Desc2">“into component container and with resizing constraints set????”</string>
    <string name="tomek_kuwalskij">Tomek Kuwalskij</string>
    <string name="account">Account</string>
</resources>