<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

<!--    header-->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/header_padding"
        >

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:layout_gravity="center"
            android:src="@drawable/arrow_back"
            android:contentDescription="@string/arrow_back" />
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/notifications"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-medium"
            android:layout_marginLeft="24dp"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/header_icon"
            android:layout_height="@dimen/header_icon"
            android:layout_gravity="center"
            android:src="@drawable/header_search"
            android:contentDescription="@string/search"
            android:layout_marginLeft="175dp"/>

    </LinearLayout>
<!--main-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/header"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/padding_12"
        >
<!--        first block-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_bg"
            android:layout_margin="@dimen/header_padding"
            android:paddingTop="@dimen/padding_12"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_12"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/header_icon"
                    android:layout_height="@dimen/header_icon"
                    android:layout_gravity="center"
                    android:src="@drawable/Avatar1"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/roman_kamushken"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_days_ago"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/padding_20"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repl1"
                    android:textSize="@dimen/text_10"
                    android:textColor="@color/blue_purple_text"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_24"
                    android:layout_height="@dimen/icon_24"
                    android:layout_gravity="center"
                    android:src="@drawable/like_icon"
                    android:layout_marginLeft="@dimen/very_big_margin"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
            </LinearLayout>
        </LinearLayout>
<!--        second block-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_bg"
            android:layout_margin="@dimen/header_padding"
            android:paddingTop="@dimen/padding_12"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_12"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/header_icon"
                    android:layout_height="@dimen/header_icon"
                    android:layout_gravity="center"
                    android:src="@drawable/Avatar2"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tina_turbina"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_18_minutes_ago"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/padding_20"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repl1"
                    android:textSize="@dimen/text_10"
                    android:textColor="@color/blue_purple_text"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_24"
                    android:layout_height="@dimen/icon_24"
                    android:layout_gravity="center"
                    android:src="@drawable/like_icon"
                    android:layout_marginLeft="@dimen/very_big_margin"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
            </LinearLayout>
        </LinearLayout>
        <!--        third block-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/gray_bg"
            android:layout_margin="@dimen/header_padding"
            android:paddingTop="@dimen/padding_12"
            android:paddingBottom="10dp"
            android:paddingLeft="@dimen/padding_16"
            android:paddingRight="@dimen/padding_12"
            android:orientation="vertical"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_40"
                >
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/header_icon"
                    android:layout_height="@dimen/header_icon"
                    android:layout_gravity="center"
                    android:src="@drawable/Avatar3"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_marginStart="16dp"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/tomek_kuwalskij"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_2_days_ago"
                        android:textColor="@color/gray_text"
                        android:textSize="14sp"
                        />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >
                <TextView
                    android:layout_width="312dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Desc2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_16"
                    android:layout_marginTop="@dimen/padding_20"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/padding_16">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/repl1"
                    android:textSize="@dimen/text_10"
                    android:textColor="@color/blue_purple_text"
                    />
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/icon_24"
                    android:layout_height="@dimen/icon_24"
                    android:layout_gravity="center"
                    android:src="@drawable/like_icon"
                    android:layout_marginLeft="@dimen/very_big_margin"
                    >
                </androidx.appcompat.widget.AppCompatImageView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
<!--    footer-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/header_height"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_24"
            android:layout_height="@dimen/icon_24"
            android:layout_marginLeft="@dimen/icon_24"
            android:layout_gravity="center"
            android:src="@drawable/ic_shopping"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_24"
            android:layout_height="@dimen/icon_24"
            android:layout_marginLeft="@dimen/padding_61"
            android:layout_gravity="center"
            android:src="@drawable/f_book_open"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_24"
            android:layout_height="@dimen/icon_24"
            android:layout_marginLeft="@dimen/padding_61"
            android:layout_gravity="center"
            android:src="@drawable/ic_cart"
            />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="@dimen/icon_24"
            android:layout_height="@dimen/icon_24"
            android:layout_marginLeft="@dimen/padding_61"
            android:layout_gravity="center"
            android:src="@drawable/ic_tag_heart"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_marginLeft="@dimen/padding_really_48"
            >
            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/icon_24"
                android:layout_height="@dimen/icon_24"
                android:layout_gravity="center"
                android:src="@drawable/ic_heart_filled"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/blue_text"
                />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>